--- a/src/main/webapp/highlighter/highlight_word_in_context.xhtml
+++ b/src/main/webapp/highlighter/highlight_word_in_context.xhtml
@@ -137,7 +137,13 @@
                     <div>
                         <p:spacer height="30" width="10"/>            
                     </div>
-                    <p:commandButton value="#{text['import_data.general.choose_csv_or_excel']}" action="/import/import_your_structured_data_two_columns.xhtml?function=highlighter&amp;faces-redirect=true" icon="pi pi-file-excel" iconPos="right"  styleClass="btn btn-primary" style="min-width: 15em;"/>
+                    <p:commandButton
+                        value="#{text['import_data.general.choose_csv_or_excel']}"
+                        action="/import/import_your_structured_data_two_columns.xhtml?function=highlighter&amp;faces-redirect=true"
+                        icon="pi pi-file-excel"
+                        iconPos="right" 
+                        styleClass="btn btn-primary"
+                        style="min-width: 15em;"/>
                 </h:form>
             </p:panel>
             <ui:include src="/WEB-INF/includes/footer.xhtml" />
