continued to improve the handling of urls. Added tests on that aspect. First tests for nocodefunctions!

--- a/src/main/webapp/organic/organic_listening_voice_of_customer_tool.xhtml
+++ b/src/main/webapp/organic/organic_listening_voice_of_customer_tool.xhtml
@@ -61,10 +61,10 @@
                 <br/>
                 <p>#{text['general.message.try_it_just_click_on_link']}</p>
                 <span style="overflow-wrap: break-word;">
-                    <a href="#{sessionBean.hostFunctionsAPI()}api/organicForAText?text-lang=en&amp;text=Buy our product now&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{activeLocale.languageTag}" target="_blank">
+                    <a href="#{sessionBean.hostFunctionsAPI()}/api/organicForAText?text-lang=en&amp;text=Buy our product now&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{activeLocale.languageTag}" target="_blank">
                         #{sessionBean.hostFunctionsAPI()}
                         <span style="color:blue">
-                            api/organicForAText?
+                            /api/organicForAText?
                         </span>
                         <span style="color:red">
                             text-lang=
