--- a/src/main/webapp/umigon/sentiment_analysis_tool.xhtml
+++ b/src/main/webapp/umigon/sentiment_analysis_tool.xhtml
@@ -80,10 +80,10 @@
                 <br/>
                 <p>#{text['general.message.try_it_just_click_on_link']}</p>
                 <span style="overflow-wrap: break-word;">
-                    <a href="#{sessionBean.hostFunctionsAPI()}api/sentimentForAText?text-lang=en&amp;text=this app is amazing&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{activeLocale.languageTag}" target="_blank">
+                    <a href="#{sessionBean.hostFunctionsAPI()}/api/sentimentForAText?text-lang=en&amp;text=this app is amazing&amp;explanation=on&amp;output-format=html&amp;explanation-lang=#{activeLocale.languageTag}" target="_blank">
                         #{sessionBean.hostFunctionsAPI()}
                         <span style="color:blue">
-                            api/sentimentForAText?
+                            /api/sentimentForAText?
                         </span>
                         <span style="color:red">
                             text-lang=
