--- a/src/main/webapp/import/import_your_data_network_builder_option_2.xhtml
+++ b/src/main/webapp/import/import_your_data_network_builder_option_2.xhtml
@@ -4,7 +4,7 @@
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
-    xmlns:o="http://omnifaces.org/ui"
+    
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view locale="#{activeLocale.currentLocale}">
 
@@ -153,10 +153,9 @@
                                     <h:column>#{notification.message}</h:column>
                                 </h:dataTable>
                                 <h:form>
-                                    <!--wrong error from netbeans, do not add onmessage in o:socket when there is a f:ajax inside-->
-                                    <o:socket channel="push" scope="session">
-                                        <f:ajax event="updateNotifications"/>
-                                    </o:socket>
+                                    <f:websocket channel="push"  scope="session">
+                                        <f:ajax event="updateNotifications" render=":notifications" />
+                                    </f:websocket>
                                 </h:form>
                             </p:scrollPanel>
                         </p:panel>
