--- a/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
+++ b/src/main/webapp/pdf_region_extractor/pdf_region_text_extractor_tool.xhtml
@@ -2,8 +2,7 @@
     lang="#{activeLocale.languageTag}"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
-    xmlns:f="jakarta.faces.core"
-    xmlns:o="http://omnifaces.org/ui"
+    xmlns:f="jakarta.faces.core"    
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view locale="#{activeLocale.currentLocale}">
@@ -221,7 +220,6 @@
                                 </p:tab>
                             </p:tabView>
                         </p:outputPanel>
-
                     </p:outputPanel>
                 </div>
                 <div class="col-3 flex-grow-1">
@@ -231,10 +229,9 @@
                                 <h:column>#{notification.message}</h:column>
                             </h:dataTable>
                             <h:form>
-                                <!--wrong error from netbeans, do not add onmessage in o:socket when there is a f:ajax inside-->
-                                <o:socket channel="push" scope="session">
-                                    <f:ajax event="updateNotifications"/>
-                                </o:socket>
+                                <f:websocket channel="push"  scope="session">
+                                    <f:ajax event="updateNotifications" render=":notifications" />
+                                </f:websocket>
                             </h:form>
                         </p:scrollPanel>
                     </p:panel>
