renamed a bean method to make it explicit that the file being uploaded is a stopword file

--- a/src/main/webapp/cowo/cowo.xhtml
+++ b/src/main/webapp/cowo/cowo.xhtml
@@ -171,7 +171,7 @@
                                         </p:selectBooleanCheckbox>                                        
                                         <br/>
                                         <br/>
-                                        <p:commandButton value="#{text['general.verbs.confirm_options']}" ajax="false" action="#{cowoBean.uploadFile}" styleClass="p-mt-3 ui-button-outlined p-d-block"/> 
+                                        <p:commandButton value="#{text['general.verbs.confirm_options']}" ajax="false" action="#{cowoBean.uploadStopWordFile}" styleClass="p-mt-3 ui-button-outlined p-d-block"/> 
                                     </p>
                                 </h:form>
                             </p:tab>
