--- a/src/main/webapp/topics/topics.xhtml
+++ b/src/main/webapp/topics/topics.xhtml
@@ -159,7 +159,7 @@
                                         </p:selectBooleanCheckbox>                                        
                                         <br/>
                                         <br/>
-                                        <p:commandButton value="#{text['general.verbs.confirm_options']}" ajax="false" action="#{topicsBean.uploadFile}" styleClass="p-mt-3 ui-button-outlined p-d-block"/> 
+                                        <p:commandButton value="#{text['general.verbs.confirm_options']}" ajax="false" action="#{topicsBean.uploadStopWordFile}" styleClass="p-mt-3 ui-button-outlined p-d-block"/> 
                                     </p>
                                 </h:form>
                             </p:tab>
