added one test on ActiveLocale. Updated libs for tests. Updated acknowledgements

--- a/src/main/webapp/acknowledgements.xhtml
+++ b/src/main/webapp/acknowledgements.xhtml
@@ -60,17 +60,13 @@
                     <ul>
                         <p>Java</p>
                         <li><a href="https://gephi.org/" target="_blank">Gephi</a></li>
-                        <li><a href="https://github.com/francesco-ficarola/gexf4j" target="_blank">Gexf4J</a></li>
                         <li><a href="https://jakarta.ee/" target="_blank">Jakarta ee</a></li>
                         <li><a href="https://jakarta.ee/specifications/faces/" target="_blank">Jakarta server faces</a></li>
                         <li><a href="https://www.primefaces.org/" target="_blank">Primefaces</a></li>
-                        <li><a href="https://omnifaces.org/" target="_blank">Omnifaces</a></li>
                         <li><a href="https://poi.apache.org/" target="_blank">Apache POI</a></li>
-                        <li><a href="https://github.com/twitterdev/twitter-api-java-sdk" target="_blank">Twitter API Client Library for Java</a></li>
-                        <li><a href="https://github.com/vdurmont/emoji-java" target="_blank">Emoji-java</a></li>
+                        <li><a href="https://github.com/felldo/JEmoji" target="_blank">jemoji</a></li>
                         <li><a href="https://github.com/monitorjbl/excel-streaming-reader" target="_blank">Excel Streaming Reader</a></li>
                         <li><a href="https://github.com/uniVocity/univocity-parsers" target="_blank">Univocity-parsers</a></li>
-                        <li><a href="https://github.com/steveswinsburg/mobile-detect" target="_blank">Mobile-detect</a></li>
                         <li><a href="https://github.com/mvel/mvel" target="_blank">MVEL</a></li>
                         <li><a href="https://gitlab.fhnw.ch/marco.romanutti/gephi-plugins/-/tree/master/modules/LinkPrediction" target="_blank">Link Prediction Gephi plugin</a></li>
                         <li><a href="https://github.com/mikaelhg/urlbuilder" target="_blank">Java URL builder</a></li>
