renamed ActiveLocale bean to LocaleBean. This change impacts all web pages. Added tests on Locale and RemoteLocale

--- a/src/main/webapp/cowo/results.xhtml
+++ b/src/main/webapp/cowo/results.xhtml
@@ -1,11 +1,11 @@
 <html 
-    lang="#{activeLocale.languageTag}"
+    lang="#{localeBean.languageTag}"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.currentLocale}">
+    <f:view locale="#{aclocaleBeanurrentLocale}">
 
         <h:head>
             <title>#{text['cowo.results.title']}</title>
