--- a/src/main/webapp/acknowledgements.xhtml
+++ b/src/main/webapp/acknowledgements.xhtml
@@ -1,11 +1,11 @@
 <html 
-    lang="#{activeLocale.languageTag}"
+    lang="#{localeBean.languageTag}"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.currentLocale}">
+    <f:view locale="#{aclocaleBeanurrentLocale}">
         <h:head>
             <!-- Primary Meta Tags -->
             <title>#{text['acknowledgements.title']}</title>
@@ -47,7 +47,7 @@
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
-                <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
+                <f:viewParam name="lang" value="#{aclocaleBeananguageTag}" />
             </f:metadata>
             <p:panel>
                 <ui:include src="/WEB-INF/includes/header.xhtml" />
