--- a/src/main/webapp/link_prediction/link_prediction.xhtml
+++ b/src/main/webapp/link_prediction/link_prediction.xhtml
@@ -3,7 +3,7 @@
       xmlns:f="jakarta.faces.core"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.currentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
         <h:head>        <!-- Primary Meta Tags -->
             <title>#{text['link_prediction.title']}</title>
             <meta name="description" content="#{text['link_prediction.description']}"/>
@@ -44,7 +44,7 @@
             <h:outputStylesheet name="css/primeflex.css" />
             <h:outputStylesheet name="css/custom.css" />
             <f:metadata>
-                <f:viewParam name="lang" value="#{activeLocale.languageTag}" />
+                <f:viewParam name="lang" value="#{localeBean.languageTag}" />
                 <f:viewParam name="function" value="#{sessionBean.function}" />
             </f:metadata>
 
