--- a/src/main/webapp/topics/topics.xhtml
+++ b/src/main/webapp/topics/topics.xhtml
@@ -1,12 +1,12 @@
 <html 
-    lang="#{activeLocale.languageTag}"
+    lang="#{localeBean.languageTag}"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
     
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{activeLocale.currentLocale}">
+    <f:view locale="#{aclocaleBeanurrentLocale}">
 
         <h:head>
             <link rel="apple-touch-icon" sizes="180x180" href="#{resource['images/favicons/apple-touch-icon.png']}"/>
@@ -50,7 +50,7 @@
                             <p:selectOneListbox id="lang" value="#{topicsBean.selectedLanguage}" style="width: 50px !important">
                                 <f:selectItems value="#{topicsBean.available}" var="l"
                                                itemValue="#{l.toLanguageTag()}"
-                                               itemLabel="#{l.getDisplayLanguage(activeLocale.currentLocale)}">
+                                               itemLabel="#{l.getDisplayLanguage(actilocaleBeanrentLocale)}">
                                 </f:selectItems>
                                 <p:ajax event="change" process="@this"/>
                             </p:selectOneListbox>
