--- a/src/main/webapp/import/import_your_data_network_builder_option_1.xhtml
+++ b/src/main/webapp/import/import_your_data_network_builder_option_1.xhtml
@@ -6,7 +6,7 @@
     
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{aclocaleBeanurrentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
             <!-- Primary Meta Tags -->
