--- a/src/main/webapp/topics/topics.xhtml
+++ b/src/main/webapp/topics/topics.xhtml
@@ -3,10 +3,10 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
-    
+
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{aclocaleBeanurrentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
             <link rel="apple-touch-icon" sizes="180x180" href="#{resource['images/favicons/apple-touch-icon.png']}"/>
@@ -46,7 +46,7 @@
                         #{text['general.message.language_of_text_to_analyze']}
                         <br/>
                         <br/>
-                        <h:form id="form3">
+                        <h:form>
                             <p:selectOneListbox id="lang" value="#{topicsBean.selectedLanguage}" style="width: 50px !important">
                                 <f:selectItems value="#{topicsBean.available}" var="l"
                                                itemValue="#{l.toLanguageTag()}"
@@ -166,16 +166,22 @@
                         </p:accordionPanel>
                     </p:panel> 
                     <p:spacer width="10" height="50"/>
-
-                    <!--RUN ANALYSIS BUTTON-->
-                    <p:commandButton value="#{text['general.verbs.compute']}" widgetVar="topicsButton" action="#{topicsBean.runAnalysis}" onclick="PF('pbAjaxLong').start();PF('topicsButton').disable()" styleClass="btn btn-primary"/>
-                    <br/>
-                    <br/>
-                    <!--PROGRESS BAR FOR RUN ANALYSIS-->
-                    <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{topicsBean.progress}"
-                                   labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
-                        <p:ajax event="complete" update=":header:messages"/>
-                    </p:progressBar>
+                    <h:form>
+                        <!--RUN ANALYSIS BUTTON-->
+                        <p:commandButton
+                            value="#{text['general.verbs.compute']}"
+                            widgetVar="topicsButton"
+                            action="#{topicsBean.runAnalysis}"
+                            onclick="PF('pbAjaxLong').start();PF('topicsButton').disable()"
+                            styleClass="btn btn-primary"/>
+                        <br/>
+                        <br/>
+                        <!--PROGRESS BAR FOR RUN ANALYSIS-->
+                        <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{topicsBean.progress}"
+                                       labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
+                            <p:ajax event="complete" update=":header:messages"/>
+                        </p:progressBar>
+                    </h:form>
                 </div>
                 <div id="thirdcol" class="col-3 flex-grow-1">
                     <p:panel header="Log">
