--- a/src/main/webapp/import/import_your_data_bulk_text.xhtml
+++ b/src/main/webapp/import/import_your_data_bulk_text.xhtml
@@ -6,7 +6,7 @@
     
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{aclocaleBeanurrentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
             <title>#{text['import_data.bulk.title']}</title>
