--- a/src/main/webapp/import/import_your_structured_data.xhtml
+++ b/src/main/webapp/import/import_your_structured_data.xhtml
@@ -6,7 +6,7 @@
     
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{aclocaleBeanurrentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
             <!-- Primary Meta Tags -->
