--- a/src/main/webapp/organic/organic.xhtml
+++ b/src/main/webapp/organic/organic.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="jakarta.faces.html"
       xmlns:f="jakarta.faces.core"
-      
+
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <f:view locale="#{localeBean.currentLocale}">
@@ -32,7 +32,7 @@
                         #{text['general.message.language_of_text_to_analyze']}
                         <br/>
                         <br/>
-                        <h:form id="form3">
+                        <h:form>
                             <p:selectOneListbox id="lang" value="#{organicBean.selectedLanguage}" style="width: 50px !important">
                                 <f:selectItem itemLabel="English 🏏" itemValue="en">
                                 </f:selectItem>
@@ -43,15 +43,22 @@
                         </h:form>
                         <p:spacer width="10" height="50"/>
 
-                        <!--RUN ANALYSIS BUTTON-->
-                        <p:commandButton value="Launch " widgetVar="organicButton" action="#{organicBean.runAnalysis}" onclick="PF('pbAjaxLong').start();PF('organicButton').disable()" styleClass="btn btn-primary"/>
-                        <br/>
-                        <br/>
-                        <!--PROGRESS BAR FOR RUN ANALYSIS-->
-                        <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{organicBean.progress}"
-                                       labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
-                            <p:ajax event="complete" update=":header:messages"/>
-                        </p:progressBar>
+                        <h:form>
+                            <!--RUN ANALYSIS BUTTON-->
+                            <p:commandButton
+                                value="#{text['general.verbs.compute']}"
+                                widgetVar="organicButton"
+                                action="#{organicBean.runAnalysis}"
+                                onclick="PF('pbAjaxLong').start();PF('organicButton').disable()"
+                                styleClass="btn btn-primary"/>
+                            <br/>
+                            <br/>
+                            <!--PROGRESS BAR FOR RUN ANALYSIS-->
+                            <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{organicBean.progress}"
+                                           labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
+                                <p:ajax event="complete" update=":header:messages"/>
+                            </p:progressBar>
+                        </h:form>
                     </p:panel> 
                 </div>
                 <div id="thirdcol" class="col-3 flex-grow-1">
