--- a/src/main/webapp/pdfmatcher/pdf_matcher_tool.xhtml
+++ b/src/main/webapp/pdfmatcher/pdf_matcher_tool.xhtml
@@ -5,7 +5,7 @@
     xmlns:f="jakarta.faces.core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{aclocaleBeanurrentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
             <title>#{text['pdfmatcher.tool.title']}</title>
