--- a/src/main/webapp/pdfmatcher/pdfmatcher.xhtml
+++ b/src/main/webapp/pdfmatcher/pdfmatcher.xhtml
@@ -3,10 +3,10 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="jakarta.faces.html"
     xmlns:f="jakarta.faces.core"
-    
+
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <f:view locale="#{aclocaleBeanurrentLocale}">
+    <f:view locale="#{localeBean.currentLocale}">
 
         <h:head>
             <title>#{text['pdfmatcher.tool.title']}</title>
@@ -33,18 +33,19 @@
 
             <div class="grid" >
                 <div class="col-12 md:9 lg:col-9">
+                    <h:form>
+                        <!--RUN ANALYSIS BUTTON-->
+                        <p:commandButton value="#{text['general.verbs.compute']}" widgetVar="cowoButton" action="#{pdfMatcherBean.runAnalysis}" onclick="PF('pbAjaxLong').start();PF('cowoButton').disable()" styleClass="btn btn-primary"/>
+                        <br/>
+                        <br/>
+                        <p:spacer height="20"/>
+                        <!--PROGRESS BAR FOR RUN ANALYSIS-->
+                        <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{pdfmatcherBean.progress}"
+                                       labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
+                            <p:ajax event="complete" update=":header:messages"/>
 
-                    <!--RUN ANALYSIS BUTTON-->
-                    <p:commandButton value="#{text['general.verbs.compute']}" widgetVar="cowoButton" action="#{pdfMatcherBean.runAnalysis}" onclick="PF('pbAjaxLong').start();PF('cowoButton').disable()" styleClass="btn btn-primary"/>
-                    <br/>
-                    <br/>
-                    <p:spacer height="20"/>
-                    <!--PROGRESS BAR FOR RUN ANALYSIS-->
-                    <p:progressBar id="pb" widgetVar="pbAjaxLong" ajax="true" value="#{pdfmatcherBean.progress}"
-                                   labelTemplate="{value}%" styleClass="p-mt-3" global="false" interval="500">
-                        <p:ajax event="complete" update=":header:messages"/>
-
-                    </p:progressBar>
+                        </p:progressBar>
+                    </h:form>
                 </div>
                 <div class="col-3 flex-grow-1">
                     <p:panel header="Log">
